2009-07-29  Kent Tamura  <tkent@chromium.org>

Reviewed by Nikolas Zimmermann.

        Fix a bug that HTMLOptionElement::value() returns an incorrect
        value in a case that the element has a label attribute and no
        value attribute.
        https://bugs.webkit.org/show_bug.cgi?id=27760

WebCore:

        Test: fast/forms/option-value-and-label.html

        * dom/OptionElement.cpp:
        (WebCore::OptionElement::collectOptionLabelOrText):
        (WebCore::OptionElement::collectOptionInnerText):
        (WebCore::OptionElement::normalizeText):
        (WebCore::OptionElement::collectOptionTextRespectingGroupLabel):
        (WebCore::OptionElement::collectOptionValue):
        * dom/OptionElement.h:
        * html/HTMLOptionElement.cpp:
        (WebCore::HTMLOptionElement::text):
        * wml/WMLOptionElement.cpp:
        (WebCore::WMLOptionElement::text):

LayoutTests:

        * fast/forms/option-value-and-label-expected.txt: Added.
        * fast/forms/option-value-and-label.html: Added.

Canonical link: https://commits.webkit.org/38130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46524 268f45cc-cd09-0410-ab3c-d52691b4dbfc