WebCore/dom/OptionElement.h
@@ -44,9 +44,12 @@ public:
 protected:
     static void setSelectedState(OptionElementData&, Element*, bool selected);
     static int optionIndex(SelectElement*, const Element*);
-    static String collectOptionText(const OptionElementData&, const Element*);
+    static String collectOptionLabelOrText(const OptionElementData&, const Element*);
     static String collectOptionTextRespectingGroupLabel(const OptionElementData&, const Element*);
     static String collectOptionValue(const OptionElementData&, const Element*);
+private:
+    static String collectOptionInnerText(const Element*);
+    static String normalizeText(const Document*, const String&);
 };
 
 // HTML/WMLOptionElement hold this struct as member variable
